syntax = "proto3";

package kessel.inventory.v1beta1.resources;

import "google/api/field_behavior.proto";
import "buf/validate/validate.proto";

import "kessel/inventory/v1beta1/resources/metadata.proto";
import "kessel/inventory/v1beta1/resources/reporter_data.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1/resources";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1.resources";

message NotificationsIntegration {
  // Metadata about this resource
  Metadata metadata = 1;

  // Write only reporter specific data
  ReporterData reporter_data = 245278792
      [ (google.api.field_behavior) = INPUT_ONLY, (buf.validate.field).required = true ];
}
