syntax = "proto3";

package kessel.inventory.v1beta2;

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

enum WriteVisibility {
  WRITE_VISIBILITY_UNSPECIFIED = 0;
  MINIMIZE_LATENCY = 1;
  IMMEDIATE = 2;
}